<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>kobuki</name>
  <version>0.0.3</version>
  <description>Kobuki node for ROS2 on Window IoT Core.</description>
  <maintainer email="bfjelds@microsoft.com">Brian Fjeldstad</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rcl</depend>
  <depend>rclcpp</depend>
  <depend>rcutils</depend>
<!--
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
-->
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>ament_cmake</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
